--- a/webuildprisons/templates/base.html
+++ b/webuildprisons/templates/base.html
@@ -18,6 +18,7 @@
     {% block head_css %}
     {% block head_css_site %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel='stylesheet' media="screen">
+    <link href="{% static 'css/main.css' %}" rel="stylesheet" media="screen">
     {% endblock head_css_site %}
     {% block head_css_section %}{% endblock head_css_section %}
     {% block head_css_page %}{% endblock head_css_page %}
