--- a/webuildprisons/templates/main/main.html
+++ b/webuildprisons/templates/main/main.html
@@ -2,11 +2,18 @@
 {% load static %}
 {% block content %}
 <div class='jumbotron'>
-
-    <p>this is the content</p>
+<h1>we.build.prisons</h1>
+    <div class="top-link">
+        <h4>
+            <a href="{% url 'sound' %}">sound(())</a>
+            <a href="{% url 'image' %}">image-</a>
+            <a href="{% url 'video' %}">video<-></a>
+            <a href="{% url 'blog' %}">words...</a>
+        </h4>
+    </div>
 </div>
-<div>
-    <img src="{% static 'img/main/fax.png' %}" alt='fax image' height="560" width="720">
+<div class="container-fluid text-center">
+    <img src="{% static 'img/main/snowtrack.png' %}" alt='fax image' height="560" width="720">
 </div>
 
 {% endblock content %}
